basic league page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,16 @@
  */
 
 @import "bootstrap";
+
+.cat-avatar {
+	padding: 2em;
+	text-align: center;
+}
+
+.center {
+	text-align: center;	
+}
+
+.padding-top {
+	padding-top: 3em;
+}
