corrected col-sm-12 and added the col-md-6 class

--- a/app/views/pages/league.html.erb
+++ b/app/views/pages/league.html.erb
@@ -1,6 +1,6 @@
 <!--presentation-->
 <div class="row">
-	<div class="col-sm-6 center padding-top">
+	<div class="col-sm-12 col-md-6 center padding-top">
 		<!--description-->
 		<p>
 			<%= t 'landing.league.intro' %>
