--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -10,6 +10,34 @@
   </head>
 
   <body>
+    <img class="left-margin" src="leaves.svg" />
+    <img class="right-margin" src="leaves2.svg" />
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Labor</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Liga Gatuna</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <img src ="logo.png" class="brand-logo" />
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Colabora</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Aprende</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <% flash.each do |key, value| %>
       <div class="alert alert-<%= flash_class(key) %>" role="alert">
         <a href="#" data-dismiss="alert" class="close">×</a>
@@ -17,5 +45,8 @@
       </div>
     <% end %>
     <%= yield %>
+    <footer class="grey-section">
+      <p class="center">Conexión Felina - Colonia Viveros - 2018</p>
+    </footer>
   </body>
 </html>
