--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -24,7 +24,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Liga Gatuna</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item d-xs-none d-lg-inline">
             <a class="nav-link" href="#">
               <img src ="logo.png" class="brand-logo" />
             </a>
