--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <section id="intro-video">
-  <div class="container">
+  <div class="container video-container">
     <img class="full-width" src="https://placekitten.com/g/800/400" />
   </div>
 </section>
@@ -9,18 +9,18 @@
     <p class="orange"><%= t 'landing.home.intro2' %></p>
     <span class="breathe"></span>
     <div class="center">
-      <img src="ciudad.png" class="landing-illustration" />
+      <img src="ciudad.png" class="landing-illustration-mini" />
     </div>
   </div>
 </section>
 <section id ="plagues">
   <div class="container row flex-center">
-    <div class="col-sm-12 col-md-6">
+    <div class="col-sm-12 col-md-6 order-last order-lg-first">
       <div class="center">
         <img src="plagas.png" class="full-width" />
       </div>
     </div>
-    <div class="col-sm-12 col-md-6">
+    <div class="col-sm-12 col-md-6 spaced-bottom">
       <h2><%= t 'landing.home.plagues.title' %></h2>
       <p><%= t 'landing.home.plagues.paragraph1' %></p>
       <p><%= t 'landing.home.plagues.paragraph2' %></p>
@@ -29,7 +29,7 @@
 </section>
 <section id ="heroes" class="eter-section">
   <div class="container row flex-center">
-    <div class="col-sm-12 col-md-6">
+    <div class="col-sm-12 col-md-6 spaced-bottom">
       <h2><%= t 'landing.home.heroes.title' %></h2>
       <p><%= t 'landing.home.heroes.paragraph1' %></p>
     </div>
@@ -51,12 +51,12 @@
 </section>
 <section id ="power">
   <div class="container row flex-center">
-    <div class="col-sm-12 col-md-6">
+    <div class="col-sm-12 col-md-6 order-last order-lg-first">
       <div class="center">
         <img src="zen.png" class="full-width" />
       </div>
     </div>
-    <div class="col-sm-12 col-md-6">
+    <div class="col-sm-12 col-md-6 spaced-bottom">
       <h2><%= t 'landing.home.power.title' %></h2>
       <p><%= t 'landing.home.power.paragraph1' %></p>
       <p><%= t 'landing.home.power.paragraph2' %></p>
@@ -66,7 +66,7 @@
 </section>
 <section id ="guardian" class="eter-section">
   <div class="container row flex-center">
-    <div class="col-sm-12 col-md-6">
+    <div class="col-sm-12 col-md-6 spaced-bottom">
       <h2><%= t 'landing.home.guardian.title' %></h2>
       <p><%= t 'landing.home.guardian.paragraph1' %></p>
     </div>
@@ -86,12 +86,12 @@
 </section>
 <section id ="society" class="eter-section">
   <div class="container row flex-center">
-    <div class="col-sm-12 col-md-6">
+    <div class="col-sm-12 col-md-6 order-last order-lg-first">
       <div class="center">
         <img src="medalla.png" class="landing-illustration" />
       </div>
     </div>
-    <div class="col-sm-12 col-md-6">
+    <div class="col-sm-12 col-md-6 spaced-bottom">
       <h2 class="orange-title"><%= t 'landing.home.society.title' %></h2>
       <p><%= t 'landing.home.society.paragraph1' %></p>
     </div>
@@ -99,7 +99,7 @@
 </section>
 <section id ="action">
   <div class="container row flex-center">
-    <div class="col-sm-12 col-md-6 center">
+    <div class="col-sm-12 col-md-6 center spaced-bottom">
       <p><%= t 'landing.home.action' %></p>
       <a href="https://infusionvlc.github.io/covi_campaign/" target="_blank" class="action-button">
         <%= t 'landing.shared.action_button' %>
