Added more pages

--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -18,22 +18,22 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Labor</a>
+          <li class="nav-item">
+            <a class="nav-link" href="/work">Labor</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Liga Gatuna</a>
+            <a class="nav-link" href="/league">Liga Gatuna</a>
           </li>
           <li class="nav-item d-xs-none d-lg-inline">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/">
               <img src ="logo.png" class="brand-logo" />
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Colabora</a>
+            <a class="nav-link" href="/collaborate">Colabora</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Aprende</a>
+            <a class="nav-link" href="/learn">Aprende</a>
           </li>
         </ul>
       </div>
