--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,7 +60,8 @@ section {
 }
 
 .action-button {
-  background: var(--fire);
+	background: var(--fire);
+	border: none;
   border-radius: 50px;
   color: var(--eter);
   cursor: pointer; /* mouse se convierte a mano */
@@ -105,6 +106,16 @@ section {
 
 .eter-section {
 	background: var(--eter);
+}
+
+.flex-card {
+	display: flex;
+	flex-direction: column;
+	padding: 1em;
+}
+
+.flex-card-main {
+	flex-grow: 1;
 }
 
 .flex-center {
