--- a/app/views/pages/league.html.erb
+++ b/app/views/pages/league.html.erb
@@ -1,57 +1,58 @@
-<!--presentation-->
-<div class="row">
-	<div class="col-sm-12 col-md-6 center padding-top">
-		<!--description-->
-		<p>
-			<%= t 'landing.league.intro' %>
-		</p>
-		<p>
-			<%= t 'landing.league.subtitle'%>
-		</p>
-	</div>
-	<div class="col-sm-12 col-md-6 center">
-		<!--image-->
-		<img src="http://placekitten.com/g/300/300">
-	</div>
+<div class="container">
+	<!--presentation-->
+	<section class="row flex-center">
+		<div class="col-sm-12 col-md-6 center">
+			<!--description-->
+			<p>
+				<%= t 'landing.league.intro' %>
+			</p>
+			<p>
+				<%= t 'landing.league.subtitle'%>
+			</p>
+		</div>
+		<div class="col-sm-12 col-md-6 center">
+			<!--image-->
+			<img src="standard.svg" class="full-width">
+		</div>
+	</section>
 
-</div>
-
-<!--6 images-->
-<div class="row">
-	<div class="col-sm-12 col-md-4 cat-avatar">
-		<img src="http://placekitten.com/g/300/300">
-		<h3>
-			Covi
-		</h3>
-	</div>
-	<div class="col-sm-12 col-md-4 cat-avatar">
-		<img src="http://placekitten.com/g/300/300">
-		<h3>
-			Covi
-		</h3>
-	</div>
-	<div class="col-sm-12 col-md-4 cat-avatar">
-		<img src="http://placekitten.com/g/300/300">
-		<h3>
-			Covi
-		</h3>
-	</div>
-	<div class="col-sm-12 col-md-4 cat-avatar">
-		<img src="http://placekitten.com/g/300/300">
-		<h3>
-			Covi
-		</h3>
-	</div>	
-	<div class="col-sm-12 col-md-4 cat-avatar">
-		<img src="http://placekitten.com/g/300/300">
-		<h3>
-			Covi
-		</h3>
-	</div>
-	<div class="col-sm-12 col-md-4 cat-avatar">
-		<img src="http://placekitten.com/g/300/300">
-		<h3>
-			Covi
-		</h3>
+	<!--6 images-->
+	<div class="row">
+		<div class="col-sm-12 col-md-4 cat-avatar">
+			<img src="http://placekitten.com/g/300/300">
+			<h3>
+				Covi
+			</h3>
+		</div>
+		<div class="col-sm-12 col-md-4 cat-avatar">
+			<img src="http://placekitten.com/g/300/300">
+			<h3>
+				Covi
+			</h3>
+		</div>
+		<div class="col-sm-12 col-md-4 cat-avatar">
+			<img src="http://placekitten.com/g/300/300">
+			<h3>
+				Covi
+			</h3>
+		</div>
+		<div class="col-sm-12 col-md-4 cat-avatar">
+			<img src="http://placekitten.com/g/300/300">
+			<h3>
+				Covi
+			</h3>
+		</div>
+		<div class="col-sm-12 col-md-4 cat-avatar">
+			<img src="http://placekitten.com/g/300/300">
+			<h3>
+				Covi
+			</h3>
+		</div>
+		<div class="col-sm-12 col-md-4 cat-avatar">
+			<img src="http://placekitten.com/g/300/300">
+			<h3>
+				Covi
+			</h3>
+		</div>
 	</div>
 </div>
