--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -1,28 +1,28 @@
+<div class="container">
+	<section class="row">
+		<div class="col-sm-12" >
+			<p class="orange"><%= t 'landing.work.intro' %></p>
+		</div>
+	</section>
+	<section>
+		<h1><%= t 'landing.work.labor' %></h1>
+		<div class="row">
+			<div class="col-md-4 col-sm-12">
+				<h2><%= t 'landing.work.sterilize.title' %></h2>
+				<p><%= t 'landing.work.sterilize.paragraph1' %></p>
+				<p><%= t 'landing.work.sterilize.paragraph2' %></p>
+			</div>
 
-<div class="row">
-	<div class="col-sm-12" class="col-md-12">
-		<%= t 'landing.work.intro' %>
-		<%= t 'landing.work.labor' %>
-	</div>
+			<div class="col-md-4 col-sm-12">
+				<h2><%= t 'landing.work.coexist.title' %></h2>
+				<p><%= t 'landing.work.coexist.paragraph1' %></p>
+				<p><%= t 'landing.work.coexist.paragraph2' %></p>
+			</div>
+
+			<div class="col-md-4 col-sm-12">
+				<h2><%= t 'landing.work.care.title' %></h2>
+				<p><%= t 'landing.work.care.paragraph1' %></p>
+			</div>
+		</div>
+	</section>
 </div>
-
-<div class="row">
-	<div class="col-md-4 col-sm-12">
-		<h2><%= t 'landing.work.sterilize.title' %></h2>
-		<p><%= t 'landing.work.sterilize.paragraph1' %></p>
-		<p><%= t 'landing.work.sterilize.paragraph2' %></p>
-	</div>
-
-	<div class="col-md-4 col-sm-12">
-		<h2><%= t 'landing.work.coexist.title' %></h2>
-		<p><%= t 'landing.work.coexist.paragraph1' %></p>
-		<p><%= t 'landing.work.coexist.paragraph2' %></p>
-	</div>
-
-	<div class="col-md-4 col-sm-12">
-		<h2><%= t 'landing.work.care.title' %></h2>
-		<p><%= t 'landing.work.care.paragraph1' %></p>
-	</div>
-</div>
-
-
