Added more static pages

--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -1,11 +1,12 @@
 <div class="container">
-	<section class="row">
+	<section class="row container">
 		<div class="col-sm-12" >
-			<p class="orange"><%= t 'landing.work.intro' %></p>
+			<p class="orange big-title"><%= t 'landing.work.intro' %></p>
 		</div>
 	</section>
 	<section>
 		<h1><%= t 'landing.work.labor' %></h1>
+		<span class="breathe"></span>
 		<div class="row">
 			<div class="col-md-4 col-sm-12">
 				<h2><%= t 'landing.work.sterilize.title' %></h2>
