--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,6 +80,10 @@ section {
 	color: var(--eter);
 }
 
+.big-title {
+	font-size: 1.6em !important;
+}
+
 .brand-logo {
 	height: 8em;
 	margin-bottom: -40%;
@@ -134,6 +138,10 @@ section {
 	font-size: 3em;
 }
 
+.humungous-title {
+	font-size: 5em !important;
+}
+
 .landing-illustration {
 	width: 50%;
 }
@@ -149,6 +157,14 @@ section {
   top: 0%;
   width: 200px;
   z-index: 999; /* para que estén por encima de todo */
+}
+
+.manifest li {
+	margin-bottom: 1em;
+}
+
+.medium-title {
+	font-size: 1.2em;
 }
 
 .min-spacing {
