--- a/app/views/pages/league.html.erb
+++ b/app/views/pages/league.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<!--presentation-->
 	<section class="row flex-center">
-		<div class="col-sm-12 col-md-6 center">
+		<div class="col-sm-12 col-md-6 medium-title">
 			<!--description-->
 			<p>
 				<%= t 'landing.league.intro' %>
