--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,7 +53,7 @@
   <div class="container row flex-center">
     <div class="col-sm-12 col-md-6 order-last order-lg-first">
       <div class="center">
-        <img src="zen.png" class="full-width" />
+        <img src="zen.gif" class="full-width" />
       </div>
     </div>
     <div class="col-sm-12 col-md-6 spaced-bottom">
