--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -79,7 +79,7 @@
 </section>
 <section id ="adorable">
   <div class="container center">
-    <img src="adorables.png" class="landing-illustration" />
+    <img src="adorables.gif" class="landing-illustration" />
     <span class="breathe"></span>
     <h2 class="huge-title"><%= t 'landing.home.adorable.title' %></h2>
   </div>
