--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <p class="orange"><%= t 'landing.home.intro2' %></p>
     <span class="breathe"></span>
     <div class="center">
-      <img src="ciudad.png" class="landing-illustration-mini" />
+      <img src="ciudad.svg" class="landing-illustration-mini" />
     </div>
   </div>
 </section>
@@ -17,7 +17,7 @@
   <div class="container row flex-center">
     <div class="col-sm-12 col-md-6 order-last order-lg-first">
       <div class="center">
-        <img src="plagas.png" class="full-width" />
+        <img src="plagas.svg" class="full-width" />
       </div>
     </div>
     <div class="col-sm-12 col-md-6 spaced-bottom">
@@ -35,14 +35,14 @@
     </div>
     <div class="col-sm-12 col-md-6">
       <div class="center">
-        <img src="sociable.png" class="full-width" />
+        <img src="sociable.svg" class="full-width" />
       </div>
     </div>
   </div>
 </section>
 <section id ="example" class="grey-section">
   <div class="container center">
-    <img src="corazon.png" class="landing-illustration" />
+    <img src="corazon.svg" class="landing-illustration" />
     <span class="breathe"></span>
     <h2><%= t 'landing.home.example.title' %></h2>
     <p class="min-spacing"><%= t 'landing.home.example.paragraph1' %></p>
@@ -72,7 +72,7 @@
     </div>
     <div class="col-sm-12 col-md-6">
       <div class="center">
-        <img src="seguridad.png" class="full-width" />
+        <img src="seguridad.svg" class="full-width" />
       </div>
     </div>
   </div>
@@ -88,7 +88,7 @@
   <div class="container row flex-center">
     <div class="col-sm-12 col-md-6 order-last order-lg-first">
       <div class="center">
-        <img src="medalla.png" class="landing-illustration" />
+        <img src="medalla.svg" class="landing-illustration" />
       </div>
     </div>
     <div class="col-sm-12 col-md-6 spaced-bottom">
@@ -107,7 +107,7 @@
     </div>
     <div class="col-sm-12 col-md-6">
       <div class="center">
-        <img src="Standar.png" class="full-width" />
+        <img src="capa.gif" class="full-width" />
       </div>
     </div>
   </div>
