Added more icons!

--- a/app/views/pages/learn.html.erb
+++ b/app/views/pages/learn.html.erb
@@ -1,5 +1,6 @@
 <section class="container center">
   <h1 class="orange humungous-title">¡Colonia a la vista!</h1>
+  <img src="explorar.svg" class="landing-illustration-mini" />
 </section>
 
 <section class="eter-section">
