--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -4,25 +4,35 @@
 			<p class="orange big-title"><%= t 'landing.work.intro' %></p>
 		</div>
 	</section>
+	<img src="equipo.svg" class="full-width" />
 	<section>
 		<h1><%= t 'landing.work.labor' %></h1>
 		<span class="breathe"></span>
 		<div class="row">
-			<div class="col-md-4 col-sm-12">
-				<h2><%= t 'landing.work.sterilize.title' %></h2>
-				<p><%= t 'landing.work.sterilize.paragraph1' %></p>
-				<p><%= t 'landing.work.sterilize.paragraph2' %></p>
+			<div class="col-md-4 col-sm-12 flex-card">
+				<div class="flex-card-main">
+					<h2><%= t 'landing.work.sterilize.title' %></h2>
+					<p><%= t 'landing.work.sterilize.paragraph1' %></p>
+					<p><%= t 'landing.work.sterilize.paragraph2' %></p>
+				</div>
+				<img src="esterilizar.svg" class="full-width" />
 			</div>
 
-			<div class="col-md-4 col-sm-12">
-				<h2><%= t 'landing.work.coexist.title' %></h2>
-				<p><%= t 'landing.work.coexist.paragraph1' %></p>
-				<p><%= t 'landing.work.coexist.paragraph2' %></p>
+			<div class="col-md-4 col-sm-12 flex-card">
+				<div class="flex-card-main">
+					<h2><%= t 'landing.work.coexist.title' %></h2>
+					<p><%= t 'landing.work.coexist.paragraph1' %></p>
+					<p><%= t 'landing.work.coexist.paragraph2' %></p>
+				</div>
+				<img src="convivir.svg" class="full-width" />
 			</div>
 
-			<div class="col-md-4 col-sm-12">
-				<h2><%= t 'landing.work.care.title' %></h2>
-				<p><%= t 'landing.work.care.paragraph1' %></p>
+			<div class="col-md-4 col-sm-12 flex-card">
+				<div class="flex-card-main">
+					<h2><%= t 'landing.work.care.title' %></h2>
+					<p><%= t 'landing.work.care.paragraph1' %></p>
+				</div>
+				<img src="cuidar.svg" class="full-width" />
 			</div>
 		</div>
 	</section>
