--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -26,7 +26,7 @@
           </li>
           <li class="nav-item d-none d-lg-inline">
             <a class="nav-link" href="/">
-              <img src ="logo.png" class="brand-logo" />
+              <img src ="logo.svg" class="brand-logo" />
             </a>
           </li>
           <li class="nav-item">
