--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -88,7 +88,7 @@
   <div class="container row flex-center">
     <div class="col-sm-12 col-md-6 order-last order-lg-first">
       <div class="center">
-        <img src="medalla.svg" class="landing-illustration" />
+        <img src="medalla.svg" class="landing-illustration medal" />
       </div>
     </div>
     <div class="col-sm-12 col-md-6 spaced-bottom">
