--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -1,17 +1,17 @@
 <div class="container">
-	<section class="row container">
+	<section class="row container responsive-header">
 		<div class="col-sm-12" >
 			<p class="orange big-title"><%= t 'landing.work.intro' %></p>
+			<img src="equipo.svg" class="full-width" />
 		</div>
 	</section>
-	<img src="equipo.svg" class="full-width" />
 	<section>
-		<h1><%= t 'landing.work.labor' %></h1>
+		<h1 class="huge-title"><%= t 'landing.work.labor' %></h1>
 		<span class="breathe"></span>
 		<div class="row">
 			<div class="col-md-4 col-sm-12 flex-card">
 				<div class="flex-card-main">
-					<h2><%= t 'landing.work.sterilize.title' %></h2>
+					<h3><%= t 'landing.work.sterilize.title' %></h3>
 					<p><%= t 'landing.work.sterilize.paragraph1' %></p>
 					<p><%= t 'landing.work.sterilize.paragraph2' %></p>
 				</div>
@@ -20,7 +20,7 @@
 
 			<div class="col-md-4 col-sm-12 flex-card">
 				<div class="flex-card-main">
-					<h2><%= t 'landing.work.coexist.title' %></h2>
+					<h3><%= t 'landing.work.coexist.title' %></h3>
 					<p><%= t 'landing.work.coexist.paragraph1' %></p>
 					<p><%= t 'landing.work.coexist.paragraph2' %></p>
 				</div>
@@ -29,7 +29,7 @@
 
 			<div class="col-md-4 col-sm-12 flex-card">
 				<div class="flex-card-main">
-					<h2><%= t 'landing.work.care.title' %></h2>
+					<h3><%= t 'landing.work.care.title' %></h3>
 					<p><%= t 'landing.work.care.paragraph1' %></p>
 				</div>
 				<img src="cuidar.svg" class="full-width" />
