Added instagram icon

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -179,6 +179,10 @@ section {
 	margin-bottom: 0.1em;
 }
 
+.mini-icon {
+	width: 1.5em;
+}
+
 .navbar-nav {
 	align-items: center;
 	font-family: 'Raleway', sans-serif;
