Substituted instagram logo for vectorial version

--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -48,7 +48,7 @@
     <%= yield %>
     <footer class="grey-section">
       <p class="center">Conexión Felina - Colonia Viveros - 2018</p>
-      <p class="center"><a href="https://www.instagram.com/coloniaviveros/"><img src="instagram.png" class="mini-icon" /></a></p>
+      <p class="center"><a href="https://www.instagram.com/coloniaviveros/"><img src="instagram.svg" class="mini-icon" /></a></p>
     </footer>
   </body>
 </html>
