Added more animations to collaborate page

--- a/app/views/pages/collaborate.html.erb
+++ b/app/views/pages/collaborate.html.erb
@@ -16,7 +16,7 @@
         <p><%= t 'landing.collaborate.sponsor.text' %></p>
       </div>
       <div class="center">
-        <img src="apadrina.svg" class="full-width card-pic" />
+        <img onmouseenter="animate(this)" onmouseleave="stop(this)" src="apadrina.png" class="full-width card-pic" id="apadrina"/>
         <button type="button" class="btn btn-primary action-button"><%= t 'landing.shared.action_button' %></button>
       </div>
     </div>
@@ -26,7 +26,7 @@
         <p><%= t 'landing.collaborate.adopt.text' %></p>
       </div>
       <div class="center">
-        <img src="adopta.svg" class="full-width card-pic" />
+        <img onmouseenter="animate(this)" onmouseleave="stop(this)" src="adopta.png" class="landing-illustration card-pic" id="adopta" /><br/>
         <button type="button" class="btn btn-primary action-button"><%= t 'landing.shared.action_button' %></button>
       </div>
     </div>
@@ -36,7 +36,7 @@
         <p><%= t 'landing.collaborate.donate.text' %></p>
       </div>
       <div class="center">
-        <img src="dona.svg" class="full-width card-pic" />
+        <img src="dona.png" class="full-width card-pic" id="dona" />
         <button type="button" class="btn btn-primary action-button"><%= t 'landing.shared.action_button' %></button>
       </div>
     </div>
@@ -71,3 +71,27 @@
     </div>
   </div>
 </section>
+<script>
+  $( document ).on('turbolinks:load', function() {
+    $('#dona').mouseover(function() {
+      $(this).attr('src', 'dona.gif');
+    });
+    $('#dona').mouseout(function() {
+      $(this).attr('src', 'dona.png');
+    });
+
+    $('#adopta').mouseover(function() {
+      $(this).attr('src', 'adopta.gif');
+    });
+    $('#adopta').mouseout(function() {
+      $(this).attr('src', 'adopta.png');
+    });
+
+    $('#apadrina').mouseover(function() {
+      $(this).attr('src', 'apadrina.gif');
+    });
+    $('#apadrina').mouseout(function() {
+      $(this).attr('src', 'apadrina.png');
+    });
+  });
+</script>
