--- a/app/views/pages/learn.html.erb
+++ b/app/views/pages/learn.html.erb
@@ -1,6 +1,9 @@
 <section class="container center">
   <h1 class="orange humungous-title">¡Colonia a la vista!</h1>
-  <img src="explorar.svg" class="landing-illustration-mini" />
+  <div class="landing-illustration-mini">
+    <img src="explorar.svg" class="static" />
+    <img src="explorar.gif" />
+  </div>
 </section>
 
 <section class="eter-section">
