--- a/app/views/pages/collaborate.html.erb
+++ b/app/views/pages/collaborate.html.erb
@@ -17,8 +17,9 @@
       </div>
       <div class="center">
         <div class="card-pic">
+          <img src="apadrina.gif" class="full-width animated" />
           <img src="apadrina.png" class="full-width static" />
-          <img src="apadrina.gif" class="full-width" />
+          <img src="apadrina.png" class="full-width invisible" />
         </div>
         <button type="button" class="btn btn-primary action-button"><%= t 'landing.shared.action_button' %></button>
       </div>
@@ -30,8 +31,9 @@
       </div>
       <div class="center">
         <div class="card-pic">
+          <img src="adopta.gif" class="landing-illustration animated" />
           <img src="adopta.png" class="landing-illustration static" />
-          <img src="adopta.gif" class="landing-illustration" />
+          <img src="adopta.png" class="landing-illustration invisible" />
         </div>
         <button type="button" class="btn btn-primary action-button"><%= t 'landing.shared.action_button' %></button>
       </div>
@@ -43,8 +45,9 @@
       </div>
       <div class="center">
         <div class="card-pic">
+          <img src="dona.gif" class="full-width animated" />
           <img src="dona.png" class="full-width static" />
-          <img src="dona.gif" class="full-width" />
+          <img src="dona.png" class="full-width invisible" />
         </div>
         <button type="button" class="btn btn-primary action-button"><%= t 'landing.shared.action_button' %></button>
       </div>
