--- a/app/views/pages/learn.html.erb
+++ b/app/views/pages/learn.html.erb
@@ -1,9 +1,9 @@
 <section class="container center">
   <h1 class="orange humungous-title">¡Colonia a la vista!</h1>
-  <div class="card-pic center">
+  <div class="card-pic center center-block">
     <img src="explorar.gif" class="landing-illustration-mini animated" />
-    <img src="explorar.svg" class="landing-illustration-mini static-white" />
-    <img src="explorar.png" class="landing-illustration-mini invisible" />
+    <img src="explorar.png" class="landing-illustration-mini static-white" />
+    <img src="explorar.png" class="landing-illustration invisible" />
   </div>
 </section>
 
