--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -12,3 +12,6 @@
 <% if !(@cat.document.nil?) %>
     <p>document: <%= @cat.document %>  </p>
 <% end %>
+<% if !current_user.nil? && (current_user.role == 'volunteer' || current_user.role == 'admin') %>
+    <%= link_to "New suffering", new_suffering_path(:cat_id => @cat.id) %>
+<% end %>
