Added list Sufferings and delete

--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -2,17 +2,18 @@
 <hr>
 <h1>name: <%= @cat.name %>  </h1>
 <hr>
-<p>bio: <%= @cat.bio %>  </p>
-<p>birthday: <%= @cat.birthdate_date %>  </p>
-<p>gender: <%= @cat.gender %>  </p>
-<p>sterilized: <%= @cat.sterilized %>  </p>
+bio: <%= @cat.bio %></br>
+birthday: <%= @cat.birthdate_date %></br>
+gender: <%= @cat.gender %></br>
+sterilized: <%= @cat.sterilized %></br>
 <% if !(@cat.abandoned_date.nil?) %>
-    <p>abandoned: <%= @cat.abandoned_date %>  </p>
+    abandoned: <%= @cat.abandoned_date %></br>
 <% end %>
 <% if !(@cat.document.nil?) %>
-    <p>document: <%= @cat.document %>  </p>
+    document: <%= @cat.document %></br>
 <% end %>
 <%  if policy(@cat).volunteer_or_admin? %>
-    <%= link_to "New suffering", new_suffering_path(:cat_id => @cat.id) %>
-    <%= link_to "Delete", cat_path(:id => @cat.id), :method => :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to "List of sufferings", sufferings_path(:cat_id => @cat.id) %></br>
+    <%= link_to "New suffering", new_suffering_path(:cat_id => @cat.id) %></br>
+    <%= link_to "Delete", cat_path(:id => @cat.id), :method => :delete, data: { confirm: 'Are you sure?' } %></br>
 <% end %>
