--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -16,9 +16,10 @@
         <% end %>
         <%= I18n.t 'cats.document'%> <%= cat.document %><br/>
         <%  if policy(@cats).volunteer_or_admin? %>
-             <%= link_to  "Edit", edit_cat_path(cat.id) %>
-             <%= link_to  "Destroy", cat_path(cat.id), method: :delete %>
-             <%= link_to  "New suffering", new_suffering_path(:cat_id => cat.id) %>
+             <%= link_to "Edit", edit_cat_path(cat.id) %></br>
+             <%= link_to "Destroy", cat_path(cat.id), method: :delete %></br>
+             <%= link_to "List of sufferings", sufferings_path(:cat_id => cat.id) %></br>
+             <%= link_to "New suffering", new_suffering_path(:cat_id => cat.id) %></br>
         <% end %>
       </div>
     </div>
