--- a/app/views/colonies/show.html.erb
+++ b/app/views/colonies/show.html.erb
@@ -3,7 +3,8 @@
 <br/>
 <% @colony.tasks.each do | task | %>
   <%= link_to task.name, task_path( task.id ) %><br/>
-  <%= task.description %><hr/>
+  <%= task.description %><br/>
+  <%= link_to "destroy", assignment_path(Assignment.where(colony_id:@colony.id, task_id:task.id).first), method: :delete %><hr/>
 <% end %>
 
 <%= link_to "add assignment", new_assignment_path(colony_id:@colony.id) %><br/>
