--- a/app/views/treatment_entries/index.html.erb
+++ b/app/views/treatment_entries/index.html.erb
@@ -1,2 +1,15 @@
 <h1>TreatmentEntry#index</h1>
-<p>Find me in app/views/treatment_entry/index.html.erb</p>
+<% @treatment_entries.each do |treatment_entry| %>
+    <div class="card">
+      <div class="card-container">
+      <div class="advanced_info">
+        Treatment date <%= treatment_entry.date %><br/>    
+        Treatment: <%= treatment_entry.treatment %><br/>    
+        Notes: <%= treatment_entry.notes %><br/>        
+        <%= link_to 'Details', treatment_entries_path(treatment_entry.id) %><br/>
+        <%= link_to "Edit", edit_treatment_entry_path(treatment_entry.id) %><br/>
+        <%= link_to "Delete", treatment_entries_path(:id => treatment_entry.id), :method => :delete, data: { confirm: 'Are you sure?' } %></br>
+      </div>
+    </div>
+  </div>
+<% end %>
