Close #115, show action

--- a/app/views/treatment_entries/index.html.erb
+++ b/app/views/treatment_entries/index.html.erb
@@ -5,8 +5,8 @@
       <div class="advanced_info">
         Treatment date <%= treatment_entry.date %><br/>    
         Treatment: <%= treatment_entry.treatment %><br/>    
-        Notes: <%= treatment_entry.notes %><br/>        
-        <%= link_to 'Details', treatment_entries_path(treatment_entry.id) %><br/>
+        Notes: <%= treatment_entry.notes %><br/>  
+        <%= link_to 'Details', treatment_entry_path(treatment_entry.id) %><br/>      
         <%= link_to "Edit", edit_treatment_entry_path(treatment_entry.id) %><br/>
         <%= link_to "Delete", treatment_entry_path(:id => treatment_entry.id), :method => :delete, data: { confirm: 'Are you sure?' } %></br>
       </div>
