Add Edit action and resolve bugs

--- a/app/views/turns/new.html.erb
+++ b/app/views/turns/new.html.erb
@@ -8,6 +8,7 @@
   <%= f.date_field :end_date %><br/><br/>
 
   <%= hidden_field_tag :assignment_id, params[:assignment_id] %>
+  <%= hidden_field_tag :colony_id, params[:colony_id] %>
 
   <%= f.submit %>
 <% end %>
