--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -6,7 +6,8 @@
         <h2> Assigment: <%= assignment.id %></h2>
         Colony: <%= Colony.find(assignment.colony_id).name %></br>
         Task: <%= Task.find(assignment.task_id).name%></br>
-        <%= link_to "New turn", new_turn_path(assignment_id: assignment.id) %><br/>
+        <%= link_to "List of turns", turns_path(assignment_id: assignment.id, colony_id: @colony_id) %><br/>
+        <%= link_to "New turn", new_turn_path(assignment_id: assignment.id, colony_id: @colony_id) %><br/>
       </div>
     </div>
   </div>
