--- a/app/views/turns/edit.html.erb
+++ b/app/views/turns/edit.html.erb
@@ -1,2 +1,14 @@
 <h1>Turns#edit</h1>
-<p>Find me in app/views/turns/edit.html.erb</p>
+<%= form_for (@turn) do |f| %>
+
+  <%= f.label :start_date %><br/>
+  <%= f.date_field :start_date %><br/><br/>
+
+  <%= f.label :end_date %><br/>
+  <%= f.date_field :end_date %><br/><br/>
+
+  <%= hidden_field_tag :assignment_id, params[:assignment_id] %>
+  <%= hidden_field_tag :colony_id, params[:colony_id] %>
+
+  <%= f.submit %>
+<% end %>
